# CoilPy

./: .buildinfo  .gitignore  CoilPy_tutorial.html  README.md  README.rst  __init__.py  coilpy.py  coilpy_py2.html  coilpy_py2.ipynb  coils.py  dipole.py  example.html  focushdf5.py  genindex.html  hdf5.py  index.html  index.md  misc.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sortedDict.py  stellopt.py  surface.py
.github/workflows/: build.yml  gh_pages.yml  greetings.yml  pypi.yml  test.yml
_modules/: index.html
_modules/coilpy/: VMEC2SPEC.html  booz_xform.html  coils.html  current_potential.html  dipole.html  focushdf5.html  (+11 more)
_sources/: example.rst.txt  index.rst.txt
_static/: documentation_options.js
api/: coilpy.VMEC2SPEC.html  coilpy.booz_xform.html  coilpy.coils.html  coilpy.current_potential.html  coilpy.dipole.html  coilpy.focushdf5.html  coilpy.hdf5.html  coilpy.html  coilpy.magnet.html  coilpy.magtense_interface.html  coilpy.mgrid.html  coilpy.misc.html  coilpy.netcdf.html  coilpy.pm4stell.html  coilpy.sortedDict.html  coilpy.stellopt.html  coilpy.surface.html  coilpy.vmec.html  coilpy.vmec.vmec.html  modules.html
coilpy/: VMEC2SPEC.py  __init__.py  booz_xform.py  coils.py  current_potential.py  dipole.py  focushdf5.py  hdf5.py  magnet.py  magtense_interface.py  mgrid.py  misc.py  netcdf.py  pm4stell.py  stellopt.py  surface.py  vmec.py  vmec2spec.py
docs/: Makefile  conf.py  example.rst  index.rst
examples/: vmec_booz_xform.html
gh-pages/: .buildinfo  search.html  searchindex.js
(+35 files in other folders)
