[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-i686-image = "manylinux2014"
manylinux-x86_64-image = "manylinux2014"

# This should be before-test, and install_requirements should be used
before-build = "pip install -r requirements.txt"